src/tests/terminal_snapshots/snapshots/terminal_snapshots__terminal_snapshots__terminai_approves_suggested_input__internal.snap
---
source: src/tests/terminal_snapshots/support.rs
expression: snapshot
---
printf approved[m
guest:printf approved                                                         [m
guest-done                                                                    [m
[2C                                                                            [m
[2C                                                                            [m
[2C                                                                            [m
[2C                                                                            [m
[2C                                                                            [m
[2C                                                                            [m
[2C                                                                            [m
[2C                                                                            [m
[2C                                                                            [m
                                                                                [m
                                                                              [m
                                                                              [m
[2C                                                                            [m
[2C                                                                            [m
[2C                                                                            [m
[2C                                                                            [m
[2C                                                                            [m
[2C                                                                            [m
[2C                                                                            [m
[2C                                                                            [m
[m
