src/tests/terminal_snapshots/snapshots/terminal_snapshots__terminal_snapshots__terminai_approves_suggested_input__tmux.snap
---
source: src/tests/terminal_snapshots/support.rs
expression: snapshot
---
printf approved     
guest:printf approved                                                           
guest-done
