src/tests/terminal_snapshots/snapshots/terminal_snapshots__terminal_snapshots__terminai_approves_suggested_input__zellij.snap
---
source: src/tests/terminal_snapshots/support.rs
expression: snapshot
---
[mprintf approved
[mguest:printf approved
[mguest-done




















[m
